route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nodejs-app
spec:
  to:
    kind: Service
    name: nodejs-app
  port:
    targetPort: 80
